--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,47 @@
   </head>
 
   <body>
+
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="/"><span>Bookers</span></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+
+        <ul class="navbar-nav ml-auto">
+          <% if user_signed_in? %>
+          <%= link_to"Home", root_path, class: "fas fa-home nav-link text-light" %>
+          <%= link_to"About", homes_about_path, class: "fas fa-link nav-link text-light" %>
+          <%= link_to"sign up", new_user_registration_path, class: "fas fa-user-plus nav-link text-light" %>
+          <%= link_to"login", user_session_path, class: "fas fa-sign-in-alt nav-link text-light" %>
+          <% else %>
+          <%= link_to"Home", root_path, class: "fas fa-home nav-link text-light" %>
+          <%= link_to"About", homes_about_path, class: "fas fa-link nav-link text-light" %>
+          <%= link_to"sign up", new_user_registration_path, class: "fas fa-user-plus nav-link text-light" %>
+          <%= link_to"login", user_session_path, class: "fas fa-sign-in-alt nav-link text-light" %>
+          <% end %>
+        </ul>
+
+      </div>
+    </div>
+  </nav>
+</header>
+
+<main>
     <%= yield %>
+</main>
+
+<footer>
+  <div class="container mt-5">
+  	<div class="row">
+    	<div class="mx-auto">
+    		<p>CopyRight Infratop.inc</p>
+    	</div>
+    </div>
+  </div>
+</footer>
   </body>
 </html>
