--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,9 @@
         <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
           <%= link_to"Home", root_path, class: "fas fa-home nav-link text-light" %>
-          <%= link_to"About", homes_about_path, class: "fas fa-link nav-link text-light" %>
-          <%= link_to"sign up", new_user_registration_path, class: "fas fa-user-plus nav-link text-light" %>
-          <%= link_to"login", user_session_path, class: "fas fa-sign-in-alt nav-link text-light" %>
+          <%= link_to"Users", users_path, class: "fas fa-users nav-link text-light" %>
+          <%= link_to"Books", books_path, class: "fas fa-book-open nav-link text-light" %>
+          <%= link_to"logout", destroy_user_session_path, class: "fas fa-sign-out-alt nav-link text-light", method: :delete %>
           <% else %>
           <%= link_to"Home", root_path, class: "fas fa-home nav-link text-light" %>
           <%= link_to"About", homes_about_path, class: "fas fa-link nav-link text-light" %>
