--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,11 +10,11 @@
   <tbody><tr></tr>
   <tr>
 	  <th>name</th>
-	  <th>渡邊克己</th>
+	  <th><%#= user.name %></th>
   </tr>
   <tr>
 	  <th>introduction</th>
-	  <th></th>
+	  <th><%#= user.introduction %></th>
   </tr>
 </tbody></table>
 
@@ -44,9 +44,9 @@
 
 
 
-    <div class="col-md-8 offset-md-1">
-      <h2>Books</h2>
-      <table class="table table-hover table-inverse">
+ <div class="col-md-8 offset-md-1">
+  <h2>Books</h2>
+  <table class="table table-hover table-inverse">
   <thead>
     <tr>
       <th></th>
@@ -56,17 +56,17 @@
     </tr>
   </thead>
   <tbody>
+    <% @books.each do |book| %>
       <tr>
-        <td><a href="/users/5">
-          <img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg">
-            </a>
-        </td>
-        <td><a class="book_5" href="/books/5">リーダブルコード</a></td>
-        <td>より良いコードを書くためのシンプルで実践的なテクニック。</td>
+        <td><%= attachment_image_tag @user, :image, :fill, 60, 60, format: 'jpeg',fallback: "no_image.jpg" %></td>
+        <td><%= link_to(user.name, show_user_path) %></td>
+        <td><%= @book.body %></td>
       </tr>
+    <% end %>
   </tbody>
-</table>
-    </div>
+  </table>
+  </div>
+
   </div>
 </div>
 </main>
