--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,17 +10,17 @@
   <tbody><tr></tr>
   <tr>
 	  <th>name</th>
-	  <th><%#= user.name %></th>
+	  <th><%= current_user.name %></th>
   </tr>
   <tr>
 	  <th>introduction</th>
-	  <th><%#= user.introduction %></th>
+	  <th><%= current_user.introduction %></th>
   </tr>
 </tbody></table>
 
 
 <div class="row">
-  <%= link_to"", edit_user_path(current_user), class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_22" %>
+  <%= link_to"", edit_user_path(current_user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
 </div>
 
   <h2 class="mt-3">New book</h2>
@@ -58,9 +58,13 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
-        <td><%= attachment_image_tag @user, :image, :fill, 60, 60, format: 'jpeg',fallback: "no_image.jpg" %></td>
-        <td><%= link_to(user.name, show_user_path) %></td>
-        <td><%= @book.body %></td>
+        <td>
+          <%= link_to user_path(book.user) do %>
+          <%= attachment_image_tag @user, :profile_image, size: "50x50", format: 'jpeg',fallback: "no_image.jpg" %>
+          <% end %>
+          </td>
+        <td><%= link_to book.title, root_path %></td>
+        <td><%= book.body %></td>
       </tr>
     <% end %>
   </tbody>
