--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,3 @@
-
-<h2>タイトル</h2>
-<p><%= @book.title %></p>
-<h2>本文</h2>
-<p><%= @book.body %></p>
+<% if @book.user_id = current_user.id %>
+    <%= link_to "削除", books_path(@book), method: :delete %>
+  <% end %>
