--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,46 +3,8 @@
     <div class="container px-5 px-sm-0">
 
   <div class="row">
-    <div class="col-md-3">
-      <h2>User info</h2>
-      <%= attachment_image_tag @user, :image, :fill, 100, 100, format: 'jpeg',fallback: "no_image.jpg" %>
-  <table class="table">
-  <tbody><tr></tr>
-  <tr>
-	  <th>name</th>
-	  <th><%= current_user.name %></th>
-  </tr>
-  <tr>
-	  <th>introduction</th>
-	  <th><%= current_user.introduction %></th>
-  </tr>
-</tbody></table>
 
-
-<div class="row">
-  <%= link_to"", edit_user_path(current_user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
-</div>
-
-  <h2 class="mt-3">New book</h2>
-
-  <form action="/books" accept-charset="UTF-8" method="post">
-  <%= form_with model: @book, local:true do |f| %>
-  <div class="form-group">
-    <label for="book_title">Title</label>
-     <%= f.text_field :title,class: "form-control book_title" %>
-  </div>
-  <div class="form-group">
-    <label for="book_opinion">Opinion</label>
-    <%= f.text_area :body, class: "form-control book_body" %>
-  </div>
-  <div class="form-group">
-    <%= f.submit 'Create Book', class: "btn btn-success" %>
-  </div>
-    </form>
-    <% end %>
-    </div>
-
-
+<%= render 'users/list' %>
 
  <div class="col-md-8 offset-md-1">
   <h2>Books</h2>
@@ -63,7 +25,7 @@
           <%= attachment_image_tag @user, :profile_image, size: "50x50", format: 'jpeg',fallback: "no_image.jpg" %>
           <% end %>
           </td>
-        <td><%= link_to book.title, root_path %></td>
+        <td><%= link_to book.title, book_path(book.id) %></td>
         <td><%= book.body %></td>
       </tr>
     <% end %>
