--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,31 @@
-<% if @book.user_id = current_user.id %>
-    <%= link_to "削除", books_path(@book), method: :delete %>
-  <% end %>
+<main>
+  <p id="notice"></p>
+    <div class="container px-5 px-sm-0">
+
+  <div class="row">
+
+<%= render 'users/list' %>
+
+ <div class="col-md-8 offset-md-1">
+  		<h2>Book detail</h2>
+  		<table class="table">
+  		  <% @books.each do |book| %>
+  		  <tbody>
+  		    <tr>
+          <td>
+            <%= link_to user_path(user.id) do %>
+              <%= attachment_image_tag @user, :profile_image, size: "50x50", format: 'jpeg',fallback: "no_image.jpg" %>
+            <%= user.name %>
+            <% end %>
+          </td>
+          <td><%= link_to book.title, book_path %></td>
+          <td><%= book.body %></td>
+        </tr>
+      </tbody>
+      <% end %>
+      </table>
+    </div>
+
+  </div>
+</div>
+</main>
