--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="/"><span>Bookers</span></a>
+      <span><%= link_to"Bookers", root_path, class: "navbar-brand" %></span>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -22,7 +22,7 @@
 
         <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
-          <%= link_to"Home", root_path, class: "fas fa-home nav-link text-light" %>
+          <%= link_to"Home", user_path(current_user.id), class: "fas fa-home nav-link text-light" %>
           <%= link_to"Users", users_path, class: "fas fa-users nav-link text-light" %>
           <%= link_to"Books", books_path, class: "fas fa-book-open nav-link text-light" %>
           <%= link_to"logout", destroy_user_session_path, class: "fas fa-sign-out-alt nav-link text-light", method: :delete %>
