--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,20 +9,22 @@
  <div class="col-md-8 offset-md-1">
   		<h2>Book detail</h2>
   		<table class="table">
-  		  <% @books.each do |book| %>
   		  <tbody>
   		    <tr>
           <td>
-            <%= link_to user_path(user.id) do %>
-              <%= attachment_image_tag @user, :profile_image, size: "50x50", format: 'jpeg',fallback: "no_image.jpg" %>
-            <%= user.name %>
+            <%= link_to user_path(@user) do %>
+              <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg',fallback: "no_image.jpg" %><br>
+            <%= @user.name %>
             <% end %>
           </td>
-          <td><%= link_to book.title, book_path %></td>
-          <td><%= book.body %></td>
+          <td><%= link_to @book.title, book_path %></td>
+          <td><%= @book.body %></td>
+          <% if @book.user == current_user %>
+          <td><%= link_to"edit", edit_book_path(@book.id), class: "btn btn-sm btn-success" %></td>
+          <td><%= link_to"destroy", book_path(@book.id), method: :delete  , class: "btn btn-sm btn-danger"  %></td>
+          <% end %>
         </tr>
       </tbody>
-      <% end %>
       </table>
     </div>
 
