--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,3 +1,18 @@
+<p id="notice">
+  <%= flash[:notice] %>
+</p>
+    <div class="container px-5 px-sm-0">
+
+    <% if @book.errors.any? %>
+      <h3><%= @book.errors.count %>errors prohibited this obj from being saved</h3>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    <% end %>
+
+  <div class="row">
+
 <div class="col-md-3">
       <h2>User info</h2>
       <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg',fallback: "no_image.jpg" %>
