--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -3,13 +3,14 @@
 </p>
     <div class="container px-5 px-sm-0">
 
-    <% if @book.errors.any? %>
-      <h3><%= @book.errors.count %>errors prohibited this obj from being saved</h3>
+      <% if @book.errors.any? %>
+      <h3 class="error_explanation"><%= @book.errors.count %>errors prohibited this obj from being saved</h3>
+      <ul>
         <% @book.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+          <li class="error_explanation"><%= message %></li>
         <% end %>
       </ul>
-    <% end %>
+     <% end %>
 
   <div class="row">
 
@@ -46,7 +47,7 @@
     <%= f.text_area :body, class: "form-control book_body" %>
   </div>
   <div class="form-group">
-    <%= f.submit 'Create Book', class: "btn btn-success" %>
+    <%= f.submit "Create Book", class: "btn btn-success" %>
   </div>
     <% end %>
     </div>
