--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -6,12 +6,14 @@
   		<h1>Editing Book</h1>
 
   		<% if @book.errors.any? %>
-      <h3 class="error_explanation"><%= @book.errors.count %>errors prohibited this obj from being saved</h3>
-      <ul>
-        <% @book.errors.full_messages.each do |message| %>
-          <li class="error_explanation"><%= message %></li>
-        <% end %>
-      </ul>
+  		<div id="error_explanation">
+        <h3><%= @book.errors.count %>errors prohibited this obj from being saved</h3>
+          <ul>
+            <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+            <% end %>
+          </ul>
+      </div>
      <% end %>
 
   <%= form_with model:@book, local:true do |f| %>
