--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,7 +24,7 @@
 
 
 <div class="row">
-  <%= link_to"", edit_user_path(current_user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
+  <%= link_to"", edit_user_path(@user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
 </div>
 
   <h2 class="mt-3">New book</h2>
@@ -51,15 +51,15 @@
   		    <tr>
           <td>
             <%= link_to user_path(@user) do %>
-              <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg',fallback: "no_image.jpg" %><br>
+              <%= attachment_image_tag @user, :profile_image, size: "50x50", format: 'jpeg',fallback: "no_image.jpg" %><br>
             <%= @user.name %>
             <% end %>
           </td>
           <td><%= link_to @book.title, book_path %></td>
           <td><%= @book.body %></td>
           <% if @book.user == current_user %>
-          <td><%= link_to"edit", edit_book_path(@book.id), class: "btn btn-sm btn-success" %></td>
-          <td><%= link_to"destroy", book_path(@book.id), method: :delete  , class: "btn btn-sm btn-danger"  %></td>
+          <td><%= link_to"Edit", edit_book_path(@book.id), class: "btn btn-sm btn-success" %></td>
+          <td><%= link_to"Destroy", book_path(@book.id), method: :delete  , class: "btn btn-sm btn-danger", data: {confirm: "本当に消しますか？"} %></td>
           <% end %>
         </tr>
       </tbody>
