--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,6 +1,8 @@
 <main>
-  <p id="notice"></p>
-    <div class="container">
+<p id="notice">
+  <%= flash[:notice] %>
+</p>
+  <div class="container">
   <div class="row">
     <h1 class="px-3 mx-auto">Welcome to <i class="fas fa-book"></i><strong>Bookers</strong>!</h1>
   </div>
