--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -4,19 +4,21 @@
     <div class="container px-5 px-sm-0">
 
       <% if @book.errors.any? %>
-      <h3 class="error_explanation"><%= @book.errors.count %>errors prohibited this obj from being saved</h3>
+      <div id="error_explanation">
+      <h3><%= @book.errors.count %>errors prohibited this obj from being saved</h3>
       <ul>
         <% @book.errors.full_messages.each do |message| %>
-          <li class="error_explanation"><%= message %></li>
+          <li><%= message %></li>
         <% end %>
       </ul>
+      </div>
      <% end %>
 
   <div class="row">
 
 <div class="col-md-3">
       <h2>User info</h2>
-      <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg',fallback: "no_image.jpg" %>
+      <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, format: 'jpeg',fallback: "no_image.jpg" %>
   <table class="table">
   <tbody><tr></tr>
   <tr>
