--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,13 +6,15 @@
     <h2>User info</h2>
 
     <% if @user.errors.any? %>
-      <h3 class="error_explanation"><%= @user.errors.count %>errors prohibited this obj from being saved</h3>
+    <div id="error_explanation">
+      <h3><%= @user.errors.count %>errors prohibited this obj from being saved</h3>
       <ul>
         <% @user.errors.full_messages.each do |message| %>
-          <li class="error_explanation"><%= message %></li>
+          <li><%= message %></li>
         <% end %>
       </ul>
-     <% end %>
+    </div>
+    <% end %>
 
     <%= form_with model: @user, local:true do |f| %>
       <div class="form-group">
