--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
 
 
 <div class="row">
-  <%= link_to"", edit_user_path(current_user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
+  <%= link_to"", edit_user_path(@user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
 </div>
 
   <h2 class="mt-3">New book</h2>
@@ -59,7 +59,7 @@
     <% @user.books.each do |book| %>
       <tr>
         <td>
-          <%= attachment_image_tag @user, :profile_image, size: "50x50", format: 'jpeg',fallback: "no_image.jpg" %>
+          <%= attachment_image_tag @user, :profile_image, size: "40x40", format: 'jpeg',fallback: "no_image.jpg" %>
           </td>
         <td><%= link_to book.title, book_path(book.id) %></td>
         <td><%= book.body %></td>
