--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -58,9 +58,11 @@
   <tbody>
     <% @user.books.each do |book| %>
       <tr>
+        <%= link_to user_path(@user) do %>
         <td>
           <%= attachment_image_tag @user, :profile_image, size: "40x40", format: 'jpeg',fallback: "no_image.jpg" %>
           </td>
+        <% end %>
         <td><%= link_to book.title, book_path(book.id) %></td>
         <td><%= book.body %></td>
       </tr>
