--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -29,11 +29,17 @@
               ♥<%= book.favorites.count %>
             <% end %>
           </td>
+          <td>
+            コメント数：<%= book.post_comments.count %>
+          </td>
           <% else %>
           <td>
             <%= link_to book_favorites_path(book), method: :post do %>
               ♥<%= book.favorites.count %>
             <% end %>
+          </td>
+          <td>
+            コメント数：<%= book.post_comments.count %>
           </td>
         <% end %>
       </tr>
