--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,9 +22,20 @@
           </td>
         <td><%= user.name %></td>
         <td><%= user.introduction %></td>
+        <td>フォロワー数:<%= user.followers.count %></td>
+        <td>
+          <% if current_user.id == user.id %>
+          <% else %>
+          <% if current_user.following?(user) %>
+            <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+          <% else %>
+            <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+          <% end %>
+          </td>
+          <% end %>
         <td><%= link_to"Show", user_path(user.id) %></td>
+        <% end %>
       </tr>
-    <% end %>
   </tbody>
   </table>
   </div>
