--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,12 +19,28 @@
 	  <th>introduction</th>
 	  <th><%= @user.introduction %></th>
   </tr>
+  <tr>
+	  <th>follows</th>
+	  <th><%= link_to @user.followings.count, user_followings_path(@user) %></th>
+  </tr>
+  <tr>
+	  <th>followers</th>
+	  <th><%= link_to @user.followers.count, user_followers_path(@user) %></th>
+  </tr>
 </tbody>
 </table>
 
 
 <div class="row">
-  <%= link_to"", edit_user_path(@user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
+  <% if current_user.id == @user.id %>
+  <%= link_to"", edit_user_path(current_user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
+  <% else %>
+  <% if current_user.following?(@user) %>
+    <%= link_to "フォロー外す", user_relationships_path(@user.id), class: "btn btn-info", method: :delete %>
+  <% else %>
+    <%= link_to "フォローする", user_relationships_path(@user.id), class: "btn btn-success", method: :post %>
+  <% end %>
+  <% end %>
 </div>
 
   <h2 class="mt-3">New book</h2>
