--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,6 +3,14 @@
 <%= render 'users/list' %>
 
  <div class="col-md-8 offset-md-1">
+
+  <%= form_with url: search_path, method: :get, local: :true do |f| %>
+    <%= f.text_field :word %>
+    <%= f.select :range, options_for_select([['User'], ['Post']]) %>
+    <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["部分一致","partial_match"]]) %>
+    <%= f.submit "検索" %>
+  <% end %>
+
   <h2>Books</h2>
   <table class="table table-hover table-inverse">
   <thead>
@@ -42,7 +50,7 @@
             コメント数：<%= book.post_comments.count %>
           </td>
         <% end %>
-      </tr>
+          </tr>
     <% end %>
   </tbody>
   </table>
