--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,4 +1,9 @@
- <h2>Books search for "test"</h2>
+<% if @renge == 'User' %>
+  <h3>Users search for "<%= @word %>"</h3>
+<% else @renge == 'Book' %>
+  <h3>Books search for "<%= @word %>"</h3>
+<% end %>
+
     <% if @range == "User" %>
       <table class="table table-hover table-inverse">
         <thead>
