--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,26 +24,11 @@
           </td>
         <td><%= link_to book.title, book_path(book.id) %></td>
         <td><%= book.body %></td>
-        <% if book.favorited_by?(current_user) %>
-          <td>
-            <%= link_to book_favorites_path(book), class: "text-danger" ,method: :delete do %>
-              ♥<%= book.favorites.count %>
-            <% end %>
-          </td>
-          <td>
-            コメント数：<%= book.post_comments.count %>
-          </td>
-          <% else %>
-          <td>
-            <%= link_to book_favorites_path(book), method: :post do %>
-              ♥<%= book.favorites.count %>
-            <% end %>
-          </td>
-          <td>
-            コメント数：<%= book.post_comments.count %>
-          </td>
-        <% end %>
-          </tr>
+        <td id = "books_buttons_<%= book.id %>">
+          <%= render partial: 'favorites/favorite-btn', locals: { book: book } %>
+        </td>
+        <td>コメント数：<%= book.post_comments.count %></td>
+      </tr>
     <% end %>
   </tbody>
   </table>
