--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -59,25 +59,12 @@
           <td><%= link_to"Destroy", book_path(@book.id), method: :delete  , class: "btn btn-sm btn-danger", data: {confirm: "本当に消しますか？"} %></td>
           <% end %>
 
-          <% if @book.favorited_by?(current_user) %>
-          <td>
-            <%= link_to book_favorites_path(@book), class: "text-danger" ,method: :delete do %>
-              ♥<%= @book.favorites.count %>
-            <% end %>
+          <td id = "books_buttons_<%= @book.id %>">
+            <%= render partial: 'favorites/favorite-btn', locals: { book: @book } %>
           </td>
           <td>
             コメント数：<%= @book.post_comments.count %>
           </td>
-          <% else %>
-          <td>
-            <%= link_to book_favorites_path(@book), method: :post do %>
-              ♥<%= @book.favorites.count %>
-            <% end %>
-          </td>
-          <td>
-            コメント数：<%= @book.post_comments.count %>
-          </td>
-        <% end %>
         </tr>
       </tbody>
       </table>
