--- a/app/views/post_comments/create.js.erb
+++ b/app/views/post_comments/create.js.erb
@@ -1,3 +1,2 @@
-$("textarea").val("");
-$("input").val("");
-$(".new-comment").html("<%= j(render partial: 'post_comment', locals: { book: @book, post_comment: @post_comment }) %>");
+$("#comments_area").html("<%= j(render 'post_comment', locals: { book: @book }) %>")
+$("#text-filed").val('')
