--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -62,14 +62,14 @@
           <td id = "books_buttons_<%= @book.id %>">
             <%= render partial: 'favorites/favorite-btn', locals: { book: @book } %>
           </td>
-          <td>
+          <td id = "comment_count_<%= @book.id %>">
             コメント数：<%= @book.post_comments.count %>
           </td>
         </tr>
       </tbody>
       </table>
 
-      <div id="comments_area">
+      <div id = "comments_area">
         <%= render partial: 'post_comments/post_comment', locals: { book: @book } %>
 
       </div>
