--- a/app/views/post_comments/_post_comment.html.erb
+++ b/app/views/post_comments/_post_comment.html.erb
@@ -1,5 +1,5 @@
 <% @book.post_comments.each do |post_comment|%>
-<div id ="book_<% post_comment.id %>" class="form-inline" >
+<div class="form-inline" >
   <p><%= attachment_image_tag post_comment.user, :profile_image, size: "50x50", format: 'jpeg',fallback: "no_image.jpg" %><br>
   <%= link_to post_comment.user.name, user_path(post_comment.user)%></p>
   <%= post_comment.comment %>
