--- a/app/views/post_comments/create.js.erb
+++ b/app/views/post_comments/create.js.erb
@@ -1,2 +1,3 @@
-$("#comments_area").html("<%= j(render 'post_comment', locals: { book: @book }) %>")
+$('#comment_count_<%= @book.id %>').html("コメント数：<%= @book.post_comments.count %>");
+$("#comments_area").html("<%= j(render 'post_comment', locals: { book: @book }) %>");
 $("#text-filed").val('')
