--- a/app/views/post_comments/destroy.js.erb
+++ b/app/views/post_comments/destroy.js.erb
@@ -1,1 +1,3 @@
-$("#book_<%= @post_comment.id %>").remove();
+$('#comment_count_<%= @book.id %>').html("コメント数：<%= @book.post_comments.count %>");
+$("#comments_area").html("<%= j(render 'post_comment', locals: { book: @book }) %>");
+$("#text-filed").val('')
