--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,3 +35,16 @@
 .heart_blue {
     color:#528fff;
 }
+
+body {
+    background-color: #f5f5f5;
+    font-family: 'Comic Sans MS';
+}
+
+header a {
+    color: #ffffff;
+}
+
+.text-align {
+    text-align: center;
+}
