--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,15 +22,15 @@
 
         <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
-          <%= link_to"Home", user_path(current_user.id), class: "fas fa-home nav-link text-light" %>
-          <%= link_to"Users", users_path, class: "fas fa-users nav-link text-light" %>
-          <%= link_to"Books", books_path, class: "fas fa-book-open nav-link text-light" %>
-          <%= link_to"logout", destroy_user_session_path, class: "fas fa-sign-out-alt nav-link text-light", method: :delete %>
+          <li><span class="fas fa-home nav-link text-light" ></span><%= link_to"Home", user_path(current_user.id) %></li>
+          <li><span class="fas fa-users nav-link text-light"></span><%= link_to"Users", users_path %></li>
+          <li><span class="fas fa-book-open nav-link text-light"></span><%= link_to"Books", books_path %></li>
+          <li><span class="fas fa-sign-out-alt nav-link text-light"></span><%= link_to"logout", destroy_user_session_path, method: :delete %></li>
           <% else %>
-          <%= link_to"Home", root_path, class: "fas fa-home nav-link text-light" %>
-          <%= link_to"About", home_about_path, class: "fas fa-link nav-link text-light" %>
-          <%= link_to"sign up", new_user_registration_path, class: "fas fa-user-plus nav-link text-light" %>
-          <%= link_to"login", user_session_path, class: "fas fa-sign-in-alt nav-link text-light" %>
+          <li><span class="fas fa-home nav-link text-light"></span><%= link_to"Home", root_path %></li>
+          <li><span class="fas fa-link nav-link text-light"></span><%= link_to"About", home_about_path %></li>
+          <li><span class="fas fa-user-plus nav-link text-light"></span><%= link_to"sign up", new_user_registration_path %></li>
+          <li><span class="fas fa-sign-in-alt nav-link text-light"></span><%= link_to"login", user_session_path %></li>
           <% end %>
         </ul>
 
