--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,7 +11,8 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
-      <th colspan="3"></th>
+      <th></th>
+      <th>comment</th>
     </tr>
   </thead>
   <tbody>
@@ -27,7 +28,7 @@
         <td id = "books_buttons_<%= book.id %>">
           <%= render partial: 'favorites/favorite-btn', locals: { book: book } %>
         </td>
-        <td>コメント数：<%= book.post_comments.count %></td>
+        <td><%= book.post_comments.count %></td>
       </tr>
     <% end %>
   </tbody>
