--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -38,7 +38,7 @@
 </table>
 
 
-<div class="row">
+<div class="row bg-white">
   <%= link_to"", edit_user_path(current_user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
 </div>
 
@@ -57,4 +57,4 @@
     <%= f.submit "Create Book", class: "btn btn-success" %>
   </div>
     <% end %>
-    </div>
+  </div>
