--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,7 +11,10 @@
       <th>image</th>
       <th>name</th>
       <th></th>
-      <th colspan="3"></th>
+      <th>following</th>
+      <th>followers</th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -22,10 +25,10 @@
           </td>
         <td><%= user.name %></td>
         <td><%= user.introduction %></td>
-        <td>フォロワー数:<%= user.followers.count %></td>
+        <td><%= user.followings.count %></td>
+        <td><%= user.followers.count %></td>
         <td>
-          <% if current_user.id == user.id %>
-          <% else %>
+          <% if current_user.id != user.id %>
           <% if current_user.following?(user) %>
             <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
           <% else %>
