--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 
   <div class="row">
 
-<div class="col-md-3">
+<div class="col-md-3" >
       <h2>User info</h2>
       <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg',fallback: "no_image.jpg" %>
   <table class="table">
@@ -28,7 +28,7 @@
 </table>
 
 
-<div class="row">
+<div class="row bg-white">
   <% if current_user.id == @user.id %>
   <%= link_to"", edit_user_path(current_user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
   <% else %>
