--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,13 +43,13 @@
   <p id="notice">
   <%= flash[:notice] %>
   </p>
-  <div class="text-center">
+  <div class="text-center ml-5">
   <% if user_signed_in? %>
     <%= form_with url: search_path, method: :get, local: :true do |f| %>
       <%= f.text_field :word %>
       <%= f.select :range, options_for_select([['User'], ['Book']]) %>
-      <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["部分一致","partial_match"], ["前方一致","forward_match"], ["後方一致","backward_match"]]) %>
-      <%= f.submit "検索" %>
+      <%= f.select :search, options_for_select([["perfect","perfect_match"], ["partial","partial_match"], ["forward","forward_match"], ["backward","backward_match"]]) %>
+      <%= f.submit "search" %>
     <% end %>
   <% end %>
   </div>
