--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -38,7 +38,7 @@
 </table>
 
 
-<div class="row bg-white">
+<div class="row">
   <%= link_to"", edit_user_path(current_user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
 </div>
 
@@ -53,6 +53,25 @@
     <label for="book_opinion">Opinion</label>
     <%= f.text_area :body, class: "form-control book_body" %>
   </div>
+
+  <div class="form-group">
+    <div class="field" id="star">
+      <%= f.label :star %>
+      <%= f.hidden_field :star, id: :review_star %>
+    </div>
+  </div>
+
+<script>
+  $('#star').raty({
+    size     : 36,
+    starOff:  '<%= asset_path('star-off.png') %>',
+    starOn : '<%= asset_path('star-on.png') %>',
+    starHalf: '<%= asset_path('star-half.png') %>',
+    scoreName: 'post[evaluation]',
+    half: true,
+  });
+</script>
+
   <div class="form-group">
     <%= f.submit "Create Book", class: "btn btn-success" %>
   </div>
