--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -30,9 +30,9 @@
         <td>
           <% if current_user.id != user.id %>
           <% if current_user.following?(user) %>
-            <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+            <%= link_to "Unfollow", user_relationships_path(user.id), class: "btn btn-outline-info", method: :delete %>
           <% else %>
-            <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+            <%= link_to "Follow", user_relationships_path(user.id), class: "btn btn-outline-primary", method: :post %>
           <% end %>
           </td>
           <% end %>
