--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,14 +28,14 @@
 </table>
 
 
-<div class="row bg-white">
+<div class="row">
   <% if current_user.id == @user.id %>
   <%= link_to"", edit_user_path(current_user), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
   <% else %>
   <% if current_user.following?(@user) %>
-    <%= link_to "フォロー外す", user_relationships_path(@user.id), class: "btn btn-info", method: :delete %>
+    <%= link_to "Unfollow", user_relationships_path(@user.id), class: "btn btn-info ml-3", method: :delete %>
   <% else %>
-    <%= link_to "フォローする", user_relationships_path(@user.id), class: "btn btn-success", method: :post %>
+    <%= link_to "Follow", user_relationships_path(@user.id), class: "btn btn-success ml-3", method: :post %>
   <% end %>
   <% end %>
 </div>
