--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -54,12 +54,9 @@
     <%= f.text_area :body, class: "form-control book_body" %>
   </div>
 
-  <div class="form-group">
-    <div class="field" id="star">
-      <%= f.label :star %>
-      <%= f.hidden_field :star, id: :review_star %>
-    </div>
-  </div>
+  <div class="mb-3" id="star">
+    <%= f.label :evaluation, "Rate" %>
+    <%= f.hidden_field :evaluation, id: :review_star %>
 
 <script>
   $('#star').raty({
@@ -67,10 +64,11 @@
     starOff:  '<%= asset_path('star-off.png') %>',
     starOn : '<%= asset_path('star-on.png') %>',
     starHalf: '<%= asset_path('star-half.png') %>',
-    scoreName: 'post[evaluation]',
+    scoreName: 'book[evaluation]',
     half: true,
   });
-</script>
+  </script>
+  </div>
 
   <div class="form-group">
     <%= f.submit "Create Book", class: "btn btn-success" %>
