--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,6 +49,21 @@
     <label for="book_opinion">Opinion</label>
     <%= f.text_area :body, class: "form-control book_body" %>
   </div>
+  <div class="mb-3" id="star">
+    <%= f.label :evaluation, "Rate" %>
+    <%= f.hidden_field :evaluation, id: :review_star %>
+
+    <script>
+    $('#star').raty({
+      size     : 36,
+      starOff:  '<%= asset_path('star-off.png') %>',
+      starOn : '<%= asset_path('star-on.png') %>',
+      starHalf: '<%= asset_path('star-half.png') %>',
+      scoreName: 'book[evaluation]',
+      half: true,
+    });
+    </script>
+  </div>
   <div class="form-group">
     <%= f.submit 'Create Book', class: "btn btn-success" %>
   </div>
