--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -39,6 +39,7 @@
     <%= f.hidden_field :evaluation, id: :review_star %>
 
     <script>
+    $('#star<%= @book_new.id %>').empty();
     $('#star').raty({
       size     : 36,
       starOff:  '<%= asset_path('star-off.png') %>',
