--- a/app/views/books/_star.html.erb
+++ b/app/views/books/_star.html.erb
@@ -1,6 +1,7 @@
 <div class="relative-post-evaluation">
   <span id="star-rate-<%= @book.id %>"></span>
   <script>
+  $('#star-rate-<%= @book.id %>').empty();
     $('#star-rate-<%= @book.id %>').raty({
       size: 36,
       starOff: "<%= asset_path('star-off.png') %>",
