--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,6 +3,11 @@
  <div class="col-md-8 offset-md-1">
 
   <h2>Books</h2>
+  <div>
+    <%= link_to"New book", books_path(sort_update: "true")%>
+      |
+    <%= link_to"Highly rated", books_path(evaluation: "true")%>
+  </div>
   <table class="table table-hover table-inverse">
   <thead>
     <tr>
@@ -33,6 +38,7 @@
 
             <span id="star-rate-<%= book.id %>"></span>
             <script>
+            $('#star-rate-<%= book.id %>').empty();
               $('#star-rate-<%= book.id %>').raty({
                 size: 36,
                 starOff: "<%= asset_path('star-off.png') %>",
