--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -25,6 +25,10 @@
     <label for="book_opinion">Opinion</label>
     <%= f.text_area :body, class: "form-control book_body" %>
   </div>
+  <div class="form-group">
+    <label for="book_opinion">Category</label>
+     <%= f.text_field :category,class: "form-control book_category" %>
+  </div>
     <%= render 'books/star' %>
   <div class="form-group">
     <%= f.submit "Update Book", class: "btn btn-success mt-3" %>
