--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,6 +14,7 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
+      <th>Category</th>
       <th></th>
       <th>comment</th>
       <th></th>
@@ -29,6 +30,7 @@
           </td>
         <td><%= link_to book.title, book_path(book.id) %></td>
         <td><%= book.body %></td>
+        <td><%= link_to book.category %></td>
         <td id = "books_buttons_<%= book.id %>">
           <%= render partial: 'favorites/favorite-btn', locals: { book: book } %>
         </td>
