--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -34,6 +34,10 @@
     <label for="book_opinion">Opinion</label>
     <%= f.text_area :body, class: "form-control book_body" %>
   </div>
+  <div class="form-group">
+    <label for="book_opinion">Category</label>
+     <%= f.text_field :category,class: "form-control book_category" %>
+  </div>
   <div class="mb-3" id="star">
     <%= f.label :evaluation, "Rate" %>
     <%= f.hidden_field :evaluation, id: :review_star %>
@@ -41,7 +45,7 @@
     <script>
     $('#star<%= @book_new.id %>').empty();
     $('#star').raty({
-      size     : 36,
+      size: 36,
       starOff:  '<%= asset_path('star-off.png') %>',
       starOn : '<%= asset_path('star-on.png') %>',
       starHalf: '<%= asset_path('star-half.png') %>',
@@ -69,6 +73,7 @@
           </td>
           <td><%= link_to @book.title, book_path %></td>
           <td><%= @book.body %></td>
+          <td><%= @book.category %></td>
           <td id = "books_buttons_<%= @book.id %>">
             <%= render partial: 'favorites/favorite-btn', locals: { book: @book } %>
           </td>
