--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,45 +1,58 @@
-<% if @renge == 'User' %>
-  <h3>Users search for "<%= @word %>"</h3>
-<% else @renge == 'Book' %>
-  <h3>Books search for "<%= @word %>"</h3>
-<% end %>
+<%= render 'users/list' %>
 
-    <% if @range == "User" %>
-      <table class="table table-hover table-inverse">
-        <thead>
-          <tr>
-            <th></th>
-            <th>name</th>
-            <th>introduction</th>
-          </tr>
-        </thead>
-      <tbody>
-      <% @users.each do |user| %>
-        <tr>
-          <td><%= attachment_image_tag user, :profile_image, size: "40x40", format: 'jpeg',fallback: "no_image.jpg" %></td>
-          <td><%= user.name %></td>
-          <td><%= user.introduction%></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
-      <% else %>
-      <table class="table table-hover table-inverse">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Title</th>
-            <th>Opinion</th>
-          </tr>
-        </thead>
-      <tbody>
-      <% @books.each do |book| %>
-        <tr>
-          <td><%= attachment_image_tag book.user, :profile_image, size: "40x40", format: 'jpeg',fallback: "no_image.jpg" %></td>
-          <td><%= link_to book.title, book_path(book) %></td>
-          <td><%= book.body %></td>
-        </tr>
-      <% end %>
-      </tbody>
+ <div class="col-md-8 offset-md-1">
+
+  <h2>Books</h2>
+  <table class="table table-hover table-inverse">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Title</th>
+      <th>Opinion</th>
+      <th>Category</th>
+      <th></th>
+      <th>comment</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @books.each do |book| %>
+      <tr>
+        <td>
+          <%= link_to user_path(book.user) do %>
+          <%= attachment_image_tag book.user, :profile_image, size: "40x40", format: 'jpeg',fallback: "no_image.jpg" %>
+          <% end %>
+          </td>
+        <td><%= link_to book.title, book_path(book.id) %></td>
+        <td><%= book.body %></td>
+        <td><%= book.category %></td>
+        <td id = "books_buttons_<%= book.id %>">
+          <%= render partial: 'favorites/favorite-btn', locals: { book: book } %>
+        </td>
+        <td><%= book.post_comments.count %></td>
+        <td>
+          <div class="relative-post-evaluation">
+
+            <span id="star-rate-<%= book.id %>"></span>
+            <script>
+            $('#star-rate-<%= book.id %>').empty();
+              $('#star-rate-<%= book.id %>').raty({
+                size: 36,
+                starOff: "<%= asset_path('star-off.png') %>",
+                starOn: "<%= asset_path('star-on.png') %>",
+                starHalf: "<%= asset_path('star-half.png') %>",
+                half: true,
+                readOnly: true,
+                score: '<%= book.evaluation %>',
+              });
+            </script>
+          </div>
+          </td>
+      </tr>
     <% end %>
+  </tbody>
   </table>
+  </div>
+
+  </div>
+</div>
