--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,6 +49,10 @@
     <label for="book_opinion">Opinion</label>
     <%= f.text_area :body, class: "form-control book_body" %>
   </div>
+  <div class="form-group">
+    <label for="book_opinion">Category</label>
+     <%= f.text_field :category,class: "form-control book_category", value: @category %>
+  </div>
   <div class="mb-3" id="star">
     <%= f.label :evaluation, "Rate" %>
     <%= f.hidden_field :evaluation, id: :review_star %>
@@ -79,7 +83,7 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
-      <th colspan="3"></th>
+      <th>Category</th>
     </tr>
   </thead>
   <tbody>
@@ -92,6 +96,7 @@
         <% end %>
         <td><%= link_to book.title, book_path(book.id) %></td>
         <td><%= book.body %></td>
+        <td><%= link_to book.category, search_path %></td>
       </tr>
     <% end %>
   </tbody>
