--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,9 +4,9 @@
 
   <h2>Books</h2>
   <div>
-    <%= link_to"New book", books_path(sort_update: "true")%>
+    <%= link_to"新しい順", books_path(sort_update: "true")%>
       |
-    <%= link_to"Highly rated", books_path(evaluation: "true")%>
+    <%= link_to"評価の高い順", books_path(evaluation: "true")%>
   </div>
   <table class="table table-hover table-inverse">
   <thead>
