--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -103,6 +103,69 @@
   </table>
 
   <div>
+    <h3>投稿数の前日比・前週比</h3>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>今日の投稿数</th>
+            <th>前日の投稿数</th>
+            <th>前日比</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <% @books_today = @books.created_today.count %>
+              <%= @books.created_today.count %>
+            </td>
+            <td>
+              <% @books_yesterday = @books.created_yesterday.count %>
+              <%= @books.created_yesterday.count %>
+            </td>
+            <td>
+              <% if @books.created_yesterday.count == 0 %>
+                投稿が0のため計算できません
+              <% else %>
+                <% @books_ratio_day = @books_today.to_f / @books_yesterday.to_f %>
+                <%= (@books_ratio_day * 100).round %> %
+              <% end %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>今週の投稿数</th>
+            <th>先週の投稿数</th>
+            <th>前週比</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <% @books_week = @books.created_this_week.count %>
+              <%= @books.created_this_week.count %>
+            </td>
+            <td>
+              <% @books_last_week = @books.created_last_week.count %>
+              <%= @books.created_last_week.count %>
+            </td>
+            <td>
+              <% if @books.created_last_week.count == 0 %>
+                投稿が0のため計算できません
+              <% else %>
+                <% @books_ratio_week = @books_week.to_f / @books_last_week.to_f %>
+                <%= (@books_ratio_week * 100).round %> %
+              <% end %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+  </div>
+
+  <div class="mt-5">
     <h3>7日分の投稿数</h3>
       <table class="table table-bordered">
         <thead>
@@ -166,7 +229,7 @@
       });
     });
   </script>
-  </div>
-  </div>
+  
+    </div>
   </div>
 </div>
