--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,12 +27,13 @@
         <td>
           <% if current_user.id != user.id %>
           <% if current_user.following?(user) %>
-            <%= link_to "Unfollow", user_relationships_path(user.id), class: "btn btn-outline-info", method: :delete %>
+            <%= link_to "Unfollow", user_relationships_path(user.id), class: "btn btn-outline-info", method: :delete, remote: true %>
           <% else %>
-            <%= link_to "Follow", user_relationships_path(user.id), class: "btn btn-outline-primary", method: :post %>
+            <%= link_to "Follow", user_relationships_path(user.id), class: "btn btn-outline-primary", method: :post, remote: true %>
+          <% end %>
           <% end %>
           </td>
-          <% end %>
+
         <td><%= link_to"Show", user_path(user.id) %></td>
         <% end %>
       </tr>
