--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,6 +18,7 @@
       <th></th>
       <th>comment</th>
       <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -52,7 +53,9 @@
               });
             </script>
           </div>
+          閲覧数:<%= book.impressions_count %>
           </td>
+
       </tr>
     <% end %>
   </tbody>
